--- a/my-portfolio/src/components/home/Home.css
+++ b/my-portfolio/src/components/home/Home.css
@@ -1,5 +1,5 @@
 .homeComponent {
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .home {
@@ -45,4 +45,12 @@
     text-decoration: none;
     color: #fff;
     font-size: 18px;
+}
+.bannerImg {
+    height: 100%;
+    width: 100%;
+    background-image: url(../images/canva2.png) !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
